--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.meterrecognition'
+    namespace 'com.example.tjx'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.meterrecognition"
+        applicationId "com.example.tjx"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -59,8 +59,10 @@ dependencies {
     implementation group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: "${opencvVersion}-${javacvVersion}", classifier: 'android-arm' // for 'armeabi-v7a'
     implementation group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: "${opencvVersion}-${javacvVersion}", classifier: 'android-arm64' // for 'arm64-v8a'
 
+    // CameraX核心依赖
     def camerax_version = "1.0.0-alpha06"
     implementation "androidx.camera:camera-core:${camerax_version}"
+    // Camera2扩展依赖
     implementation "androidx.camera:camera-camera2:${camerax_version}"
 
     def camerax_view_version = "1.0.0-alpha03"
