--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "meterRecognition"
+rootProject.name = "AndroidCamera"
 include ':app'
