修改了ImageView3Activity，使其界面拥有了预览、上传和拍照的功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,5 @@ dependencies {
     // If you to use Camera Extensions
     implementation "androidx.camera:camera-extensions:$camerax_ext_version"
 
-
+    implementation 'com.jakewharton:butterknife:10.2.3'
 }
